# ScreenMonitorMCP

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_SETUP_GUIDE.md  QUICK_START.md  README.md  RELEASE_NOTES_v2.1.0.md  SECURITY.md  STREAMING_ANALYSIS_GUIDE.md  ScreenMonitorMCP_Test_Results.md  Smart_Click_Improvements.md  ai_providers.py  application_monitor.py  cache_manager.py  claude_desktop_config.json  claude_desktop_config_example.json  error_recovery.py  input_simulator.py  main.py  mcp_client_examples.py  mcp_debug.py  mcp_main.py  predictive_intelligence.py  pyproject.toml  real_time_monitor.py  requirements-dev.txt  requirements-test.txt  requirements.txt  screen_streamer.py  test_application_monitoring.py  test_list_tools.py  test_ocr_direct.py  test_ocr_fix.py  test_predictive.py  test_real_time.py  test_revolutionary_features.py  (+3 more)
.github/workflows/: ci-cd.yml  ci.yml
.kiro/specs/architecture-refactoring-consolidation/: design.md  requirements.md  tasks.md
screenmonitormcp/: __init__.py  ai_providers.py  batch_processor.py  conversation_context.py  image_optimizer.py  main.py  platform_support.py  real_time_monitor.py  smart_monitoring.py  streaming_analysis.py  system_metrics.py  video_recorder.py
screenmonitormcp_v2/: __init__.py  memory_system.db
screenmonitormcp_v2.egg-info/: PKG-INFO  SOURCES.txt
screenmonitormcp_v2/core/: ai_analyzer.py  ai_service.py  config.py  mcp_server.py  memory_system.py  screen_capture.py  streaming.py
screenmonitormcp_v2/server/: config.py
src/: __init__.py
src/core/: command_handler.py
src/server/: config.py
tests/: README.md  conftest.py  test_api.py
